--- a/Carrenta/Carrenta.csproj
+++ b/Carrenta/Carrenta.csproj
@@ -199,7 +199,7 @@
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
     <Compile Include="Models\AccountViewModels.cs" />
-    <Compile Include="Models\AdminController.cs" />
+    <Compile Include="Controllers\AdminController.cs" />
     <Compile Include="Models\CarrentaModels.cs" />
     <Compile Include="Models\IdentityModels.cs" />
     <Compile Include="Models\ManageViewModels.cs" />
@@ -439,6 +439,9 @@
     <Content Include="Scripts\popper-utils.min.js.map" />
     <Content Include="Scripts\popper-utils.js.map" />
     <Content Include="Views\User\UserList.cshtml" />
+    <Content Include="Views\Order\SelectRangePage.cshtml" />
+    <Content Include="Views\Order\SelectRangeResult.cshtml" />
+    <Content Include="Views\User\Edit.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
